# redis-stream-player

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.claude/skills/commit/: SKILL.md
conf/: convert.yaml  play.yaml  record.yaml  truncate.yaml
conf/redis/: local.yaml  prod.yaml
conf/streams/: sensors.yaml
integration/: fill_redis.py  integration_test.sh  truncate_cfg.yaml
src/boomrdbox/: __init__.py  _config.py  cli.py  instances.py  io.py  models.py  player.py  recorder.py  tools.py  tui.py
src/redis_stream_player/: __init__.py  cli.py  io.py  models.py  player.py  recorder.py  tools.py
src/redis_stream_player/conf/: info.yaml  play.yaml  record.yaml
src/redis_stream_player/conf/redis/: local.yaml  prod.yaml
src/redis_stream_player/conf/streams/: events.yaml
tests/: conftest.py  test_cli.py  test_config.py  test_instances.py  test_integration.py  test_io.py  test_models.py  test_player.py  test_recorder.py  test_tools.py  test_tui.py
